--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mp-form",
-  "version": "0.1.3",
+  "version": "0.3.0",
   "main": "lib/index.js",
   "license": "MIT",
   "devDependencies": {
@@ -18,9 +18,9 @@
     "mp-remote": "0.x"
   },
   "scripts": {
-    "prepare": "rimraf lib && tsc && cpx src/index.less lib"
+    "prepack": "rimraf lib && tsc && cpx src/index.less lib"
   },
   "dependencies": {
-    "moment": "^2.29.1"
+    "dayjs": "^1.10.7"
   }
 }
