--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "mp-form",
-  "version": "0.7.1",
+  "version": "0.7.2",
   "main": "lib/index.js",
   "license": "MIT",
+  "files": [
+    "lib"
+  ],
   "devDependencies": {
     "@tarojs/components": "^3.0.18",
     "@tarojs/taro": "^3.0.18",
